# pyomsdk

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/pyomsdk/: __init__.py  ops_manager_client.py
src/pyomsdk/resources/: __init__.py  access_list_resource.py  agents_resource.py  alert_configurations_resource.py  alerts_resource.py  api_keys_on_projects_resource.py  automation_resource.py  backup_daemon_resource.py  (+46 more)
tests/: conftest.py  shared.py  test_accesslist.py  test_agents.py  test_alert_configurations.py  test_alerts.py  test_all_resources_http_code.py  test_api_keys_on_projects.py  test_automation.py  test_backup_configurations.py  test_backup_daemon.py  test_backup_encryption_keys.py  test_blockstore.py  test_clusters.py  test_configuration.py  test_databases.py  test_deployment_regions.py  test_disks.py  test_events.py  test_feature_control_policies.py  test_file_system_store.py  test_global_access_list.py  test_global_alert_configurations.py  test_global_alerts.py  test_global_api_keys.py  test_global_events.py  test_hosts.py  test_import_deployments.py  test_integration_settings.py  test_log_collection_jobs.py  test_maintenance_windows.py  test_measurements.py  test_migrate_to_mongodb_atlas.py  test_oplog_store.py  test_organization_access_lists.py  test_organization_api_keys.py  test_organizations.py  test_performance_advisor.py  test_project_backup_job.py  test_projects.py  (+14 more)
tests/shared/: accesslist.py  agent.py  org.py  org_accesslist.py  org_api_key.py  project.py  resource_api.py  user.py
